Fix bug connect wallet button does not show on mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -64,7 +64,6 @@
     padding-right: 0px;
 }
 .css-1u6kme8 {
-    display: none;
     -webkit-align-items: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
